# Razorpen

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  latex.rs  main.rs  types.rs  utils.rs
src/components/: Initializer.tsx  Projects.tsx
src/components/common/: AnimatedRouter.tsx  Transition.tsx
src/components/dashboard/: DashboardBase.tsx  Initializer.tsx  ProjectList.tsx  SideMenu.tsx
src/pages/: Dashboard.tsx  Error.tsx  Initialize.tsx  ProjectCreation.tsx  dashboard.tsx  editor.tsx  error.tsx  settings.tsx
src/store/: dashboard_store.ts  global_errors.ts  global_errors_store.ts  global_status.ts  global_status_store.ts
src/types/: project.ts
