[package]
name = "razorpen"
version = "0.0.1"
description = "A desktop Latex editor using Tauri"
authors = ["403F"]
license = "AGPL-3"
repository = "https://github.com/4o3F/Razorpen"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "process-exit", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.31.1"
directories = "5.0.1"
log = { version = "0.4.20", features = [] }
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
zip-extract = "0.1.2"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
